update get order details api
