# routes/order.js
@@ -194,6 +194,12 @@ router.get(
           ),
           'customerName'
         ],
+        [
+          sequelize.literal(
+            `(select name from warehouses where id = (Select "warehouseId" from customers where customers.id = orders."customerId" limit 1))`
+          ),
+          'warehouseName'
+        ],
         'discount',
         'amount',
         'totalAmount',
